// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <A /> correctly 1`] = `
.lovCuy {
  background-color: transparent;
  text-decoration-skip: objects;
}

<a
  className="src__A-ecpVJh lovCuy"
/>
`;

exports[`renders <Abbr /> correctly 1`] = `


<abbr
  className="src__Abbr-bAnqpS gtMeep"
/>
`;

exports[`renders <Article /> correctly 1`] = `
.ikMeRt {
  display: block;
}

<article
  className="src__Article-cKDuAy ikMeRt"
/>
`;

exports[`renders <Aside /> correctly 1`] = `
.ijRwfR {
  display: block;
}

<aside
  className="src__Aside-blfygu ijRwfR"
/>
`;

exports[`renders <Audio /> correctly 1`] = `
.eYhVCs {
  display: inline-block;
}

.eYhVCs:not([controls]) {
  display: none;
  height: 0;
}

<audio
  className="src__Audio-cpeMhj eYhVCs"
/>
`;

exports[`renders <B /> correctly 1`] = `
.dLmUSQ {
  font-weight: bolder;
}

<b
  className="src__B-kYcTRm dLmUSQ"
/>
`;

exports[`renders <Button /> correctly 1`] = `
.iRzzDR {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
}

.iRzzDR::-moz-focus-inner,
.iRzzDR[type="button"]::-moz-focus-inner,
.iRzzDR[type="reset"]::-moz-focus-inner,
.iRzzDR[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.iRzzDR:-moz-focusring,
.iRzzDR[type="button"]:-moz-focusring,
.iRzzDR[type="reset"]:-moz-focusring,
.iRzzDR[type="submit"]:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

<button
  className="src__Button-bjtQYq iRzzDR"
/>
`;

exports[`renders <Canvas /> correctly 1`] = `
.bTMtpB {
  display: inline-block;
}

<canvas
  className="src__Canvas-dHWBuw bTMtpB"
/>
`;

exports[`renders <Code /> correctly 1`] = `
.bFMmpU {
  font-family: monospace, monospace;
  font-size: 1rem;
}

<code
  className="src__Code-jYaiac bFMmpU"
/>
`;

exports[`renders <Details /> correctly 1`] = `
.eLTDBU {
  display: block;
}

<details
  className="src__Details-bMPFts eLTDBU"
/>
`;

exports[`renders <Dfn /> correctly 1`] = `
.giuCOS {
  font-style: italic;
}

<dfn
  className="src__Dfn-ffMPxK giuCOS"
/>
`;

exports[`renders <Fieldset /> correctly 1`] = `
.gKnJJb {
  padding: 0.35em 0.75em 0.625em;
}

<fieldset
  className="src__Fieldset-fInase gKnJJb"
/>
`;

exports[`renders <FigCaption /> correctly 1`] = `
.epAseh {
  display: block;
}

<figcaption
  className="src__FigCaption-hoDWbO epAseh"
/>
`;

exports[`renders <Figure /> correctly 1`] = `
.kYFPua {
  display: block;
  margin: 1rem 2.5rem;
}

<figure
  className="src__Figure-MvZXy kYFPua"
/>
`;

exports[`renders <Footer /> correctly 1`] = `
.fzGbIX {
  display: block;
}

<footer
  className="src__Footer-cICHrI fzGbIX"
/>
`;

exports[`renders <H1 /> correctly 1`] = `
.cdoVsj {
  font-size: 2rem;
  margin: 0.625rem 0;
}

<h1
  className="src__H1-kNUGse cdoVsj"
/>
`;

exports[`renders <Header /> correctly 1`] = `
.cXQwqY {
  display: block;
}

<header
  className="src__Header-bIhUgD cXQwqY"
/>
`;

exports[`renders <Hr /> correctly 1`] = `
.gzArFj {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

<hr
  className="src__Hr-jTIkCb gzArFj"
/>
`;

exports[`renders <Img /> correctly 1`] = `
.ivJkKO {
  border-style: none;
}

<img
  className="src__Img-gjPRNy ivJkKO"
/>
`;

exports[`renders <Input /> correctly 1`] = `
.kPJKsw {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
}

.kPJKsw::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

<input
  className="src__Input-fEcOwi kPJKsw"
/>
`;

exports[`renders <Kbd /> correctly 1`] = `
.isVSTd {
  font-family: monospace, monospace;
  font-size: 1rem;
}

<kbd
  className="src__Kbd-dxUERL isVSTd"
/>
`;

exports[`renders <Legend /> correctly 1`] = `
.dJEAnh {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

<legend
  className="src__Legend-bAhEow dJEAnh"
/>
`;

exports[`renders <Main /> correctly 1`] = `
.gwWdmq {
  display: block;
}

<main
  className="src__Main-btYlaf gwWdmq"
/>
`;

exports[`renders <Mark /> correctly 1`] = `
.juvXfj {
  background-color: #ff0;
  color: #000;
}

<mark
  className="src__Mark-gsydcK juvXfj"
/>
`;

exports[`renders <Menu /> correctly 1`] = `
.jRYaVX {
  display: block;
}

<menu
  className="src__Menu-jiUApB jRYaVX"
/>
`;

exports[`renders <Nav /> correctly 1`] = `
.jRYaVX {
  display: block;
}

<menu
  className="src__Menu-jiUApB jRYaVX"
/>
`;

exports[`renders <Optgroup /> correctly 1`] = `
.iFSmzs {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

<optgroup
  className="src__Optgroup-Phlfn iFSmzs"
/>
`;

exports[`renders <Pre /> correctly 1`] = `
.beuufU {
  font-family: monospace, monospace;
  font-size: 1rem;
}

<pre
  className="src__Pre-fkXllC beuufU"
/>
`;

exports[`renders <Progress /> correctly 1`] = `
.bEoZpq {
  display: inline-block;
  vertical-align: baseline;
}

<progress
  className="src__Progress-fidndm bEoZpq"
/>
`;

exports[`renders <Samp /> correctly 1`] = `
.ktmDsn {
  font-family: monospace, monospace;
  font-size: 1rem;
}

<samp
  className="src__Samp-fCgRqV ktmDsn"
/>
`;

exports[`renders <Section /> correctly 1`] = `
.eLknUB {
  display: block;
}

<section
  className="src__Section-dZUgTN eLknUB"
/>
`;

exports[`renders <Select /> correctly 1`] = `
.ekFIkW {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  text-transform: none;
}

<select
  className="src__Select-kkUZlk ekFIkW"
/>
`;

exports[`renders <Small /> correctly 1`] = `
.herZpY {
  font-size: 80%;
}

<small
  className="src__Small-gOuvkQ herZpY"
/>
`;

exports[`renders <Strong /> correctly 1`] = `
.gABlxY {
  font-weight: bolder;
}

<strong
  className="src__Strong-laomNI gABlxY"
/>
`;

exports[`renders <Sub /> correctly 1`] = `
.jzNWGj {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
  bottom: -0.25em;
}

<sub
  className="src__Sub-jswKaB jzNWGj"
/>
`;

exports[`renders <Summary /> correctly 1`] = `
.jeqMzv {
  display: list-item;
}

<summary
  className="src__Summary-cPdbBK jeqMzv"
/>
`;

exports[`renders <Sup /> correctly 1`] = `
.iqVsOf {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
  top: -0.5em;
}

<sup
  className="src__Sup-eHQeoX iqVsOf"
/>
`;

exports[`renders <Svg /> correctly 1`] = `
.chrnMV:not(:root) {
  overflow: hidden;
}

<svg
  className="src__Svg-kcnftw chrnMV"
/>
`;

exports[`renders <Textarea /> correctly 1`] = `
.bCxsrI {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: auto;
}

<textarea
  className="src__Textarea-jjPykp bCxsrI"
/>
`;

exports[`renders <Video /> correctly 1`] = `
.dpXJul {
  display: inline-block;
}

<video
  className="src__Video-ggHrOn dpXJul"
/>
`;
